SET(PLUGIN_DIRECTORY_NAME "Plugin2Call")
CONFIGURE_V3D_PLUGIN(BinaryThreshold_called)
CONFIGURE_V3D_PLUGIN(CannyEdgeDetection_called)
CONFIGURE_V3D_PLUGIN(Cast2Float_called)
CONFIGURE_V3D_PLUGIN(Cast2UINT8_called)
CONFIGURE_V3D_PLUGIN(DiscreteGaussianFilter_called)
CONFIGURE_V3D_PLUGIN(Erode_called)
CONFIGURE_V3D_PLUGIN(InvertIntensity_called)
CONFIGURE_V3D_PLUGIN(ITKCannySegmentation_called)
CONFIGURE_V3D_PLUGIN(ITKMorphologicalWatershedFromMarkers_called)
CONFIGURE_V3D_PLUGIN(Kmeans_called)
CONFIGURE_V3D_PLUGIN(MeanFilter_called)
CONFIGURE_V3D_PLUGIN(MedianFilter_called)
CONFIGURE_V3D_PLUGIN(RescaleIntensity_called)
CONFIGURE_V3D_PLUGIN(Sigmoid_called)
CONFIGURE_V3D_PLUGIN(And_called)
CONFIGURE_V3D_PLUGIN(ITKThresholdSegmentation_called)
ADD_SUBDIRECTORY(pipeline)

