SET(PLUGIN_GROUP_NAME "Superplugin_new_v1")

#CONFIGURE_V3D_PLUGIN(Superplugin)


##set the source and header files ##
SET(QtITK_SRCS
	SuperPlugin.cxx
	Dialog.cxx
	ItkPluginManager.cxx
	Pages.cxx	
  )

##files need to use moc (include Q_OBJECT)
QT4_WRAP_CPP(QT_MOC_SRCS
	SuperPlugin.h
	Dialog.h
	#ItkPluginManager.h
	Pages.h	
  )
##files need to use rcc(.qrc file)
QT4_ADD_RESOURCES(QT_QRC_SRCS
	superPluginIcons.qrc
	)
##function to deal with superPlugin
FUNCTION (CONFIGURE_V3D_MYSUPERPLUGIN plugin_name )# QtITK_SRCS QT_MOC_SRCS)
##add the temp file's direection#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} )

ADD_LIBRARY(${plugin_name} SHARED ${QtITK_SRCS} ${QT_MOC_SRCS} ${QT_QRC_SRCS})
#TARGET_LINK_LIBRARIES(${plugin_name} ITKIOReview ITKIO  ITKNumerics ITKStatistics ITKAlgorithms V3DInterface V3DITKCommon ${QT_LIBRARIES} )

TARGET_LINK_LIBRARIES(${plugin_name} ${ITK_LIBRARIES} V3DInterface V3DITKCommon ${QT_LIBRARIES} )

SET(PLUGIN_GROUP_DIR ${INSTALLATION_DIRECTORY}/${PLUGIN_GROUP_NAME})
SET(PLUGIN_DIR ${PLUGIN_GROUP_DIR})
SET(PLUGIN_DESTINATION_DIR ${PLUGIN_DIR})

## mkdir the dir //and mv the plugin to the dir
FILE(MAKE_DIRECTORY ${PLUGIN_DIR})

INSTALL(TARGETS ${plugin_name}
  LIBRARY DESTINATION ${PLUGIN_DIR} COMPONENT RuntimeLibraries
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
  )
IF(NOT APPLE)
IF(NOT SOLVED_RPATH_ISSUE)

  SET(LIBRARY_BUILD_DIR ${LIBRARY_OUTPUT_PATH})

  ADD_CUSTOM_COMMAND(
    SOURCE ${plugin_name}
    COMMAND ${CMAKE_COMMAND}
    ARGS -E copy ${LIBRARY_BUILD_DIR}/${CMAKE_SHARED_MODULE_PREFIX}${plugin_name}${CMAKE_SHARED_MODULE_SUFFIX} ${PLUGIN_DESTINATION_DIR}/${plugin_name}${CMAKE_SHARED_MODULE_SUFFIX}
    TARGET ${plugin_name}
    OUTPUTS ${LIBRARY_DESTINATION_DIR}/${PLUG}${CMAKE_SHARED_MODULE_SUFFIX}
    )

ENDIF(NOT SOLVED_RPATH_ISSUE)
ENDIF(NOT APPLE)
IF (APPLE)

IF(NOT SOLVED_RPATH_ISSUE)

  SET(LIBRARY_BUILD_DIR ${LIBRARY_OUTPUT_PATH})

  ADD_CUSTOM_COMMAND(
    SOURCE ${plugin_name}
    COMMAND ${CMAKE_COMMAND}
    ARGS -E copy ${LIBRARY_BUILD_DIR}/${CMAKE_SHARED_MODULE_PREFIX}${plugin_name}.dylib ${PLUGIN_DESTINATION_DIR}/${plugin_name}.dylib
    TARGET ${plugin_name}
    OUTPUTS ${LIBRARY_DESTINATION_DIR}/${PLUG}${CMAKE_SHARED_MODULE_SUFFIX}
    )

ENDIF(NOT SOLVED_RPATH_ISSUE)
ENDIF(APPLE)

ENDFUNCTION(CONFIGURE_V3D_MYSUPERPLUGIN plugin_name)
#########end function ################
#compile the superPlugin
CONFIGURE_V3D_MYSUPERPLUGIN( SuperPlugin_new_v1 )# ${QtITK_SRCS} ${QT_MOC_SRCS})

#ADD_SUBDIRECTORY(test)   
